# numerical

./: LICENSE  readme.md  setup.cfg  setup.py
numerical/: __init__.py
tests/: test_input.py
