[metadata]
name = numerical
version = attr: numerical.__version__
author = Nuno André
author_email = mail@nunoand.re
url = https://github.com/nuno-andre/numerical#readme
description = Positional numeral systems in arbitrary bases
long_description = file: readme.md
long_description_content_type = text/markdown
license = BSD-3-Clause
license_files =
    LICENSE
platform = any
keywords = numeral system, base12, duodecimal, dozenal
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Typing :: Typed
project_urls =
    Source = https://github.com/nuno-andre/numerical
    Bug Tracker = https://github.com/nuno-andre/numerical/issues

[options]
zip_safe = True
include_package_data = True
python_requires = >= 3.7
packages = find:
setup_requires =
    setuptools >= 40.9.0
    wheel

[options.package_data]
numerical =
    py.typed

[options.extras_require]
dev =
    mypy
    flake8
    pytest
    typing_extensions>=4.1;python_version<'3.11'
docs =
    sphinx
    sphinx-rtd-theme

[flake8]
ignore = E221, E241
exclude =
    .git,
    __pycache__,
    .mypy_cache,
    .pytest_cache,
max-complexity = 10
inline-quotes = single
multiline-quotes = single
docstring-quotes = single
